[tool.poetry]
name = "biolink_model_toolkit"
version = "0.8.8"
description = "Biolink Model Toolkit: A Python API for working with the Biolink Model"
authors = ["veenhouse <luke.veenhuis@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7.1"
linkml = "^1.3.0"
linkml-runtime = "^1.3.0"
deprecation = ">=2.0.6"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"
numpydoc = "^1.4.0"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
